[project]
name = "pubmed-fetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "NIDHI",email = "89473516+Nidhi-Pawar@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "typer (>=0.15.2,<0.16.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "biopython (>=1.85,<2.0)",
    "pydantic (>=2.11.3,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
